Bug 1541563 - Sync 131 - Aligned breakpoints and XHR breakpoints panes r=loganfsmyth
Differential Revision: https://phabricator.services.mozilla.com/D25986

UltraBlame original commit: d1d9f4d76a7a2e2e4747dc5bf9c0852180b4ecd0

--- a/devtools/client/debugger/new/src/components/SecondaryPanes/Expressions.css
+++ b/devtools/client/debugger/new/src/components/SecondaryPanes/Expressions.css
@@ -44,7 +44,7 @@
 .expressions-list {
   
   margin: 0;
-  padding: 0;
+  padding: 4px 0px;
 }
 
 .expression-input-container {
